# bamarler

./: README.md  resume.md
portfolio/: .prettierrc  Makefile  PORTFOLIO_BREAKDOWN.md  next.config.ts  package.json
portfolio/public/: robots.txt  sitemap.xml
portfolio/public/wasm/: slingshot.data  slingshot.js
portfolio/slingshot-engine/: CMakeLists.txt
portfolio/slingshot-engine/levels/: level_01.json  level_02.json  level_03.json  level_04.json  level_05.json  level_06.json  level_07.json  level_08.json  level_09.json  level_10.json
portfolio/slingshot-engine/src/: main.cpp
portfolio/slingshot-engine/src/config/: colors.hpp  display.hpp  physics.hpp
portfolio/slingshot-engine/src/core/: renderer.cpp  renderer.hpp
portfolio/slingshot-engine/src/entities/: agent.hpp  asteroid.hpp  entity.hpp  goal.hpp  planet.hpp  singularity.hpp  sun.hpp
portfolio/slingshot-engine/src/game/: game.cpp  game.hpp  level_loader.hpp  slingshot.cpp  slingshot.hpp
portfolio/slingshot-engine/src/math/: vec2.hpp
portfolio/slingshot-engine/src/physics/: body.hpp  world.cpp  world.hpp
portfolio/src/: middleware.ts
portfolio/src/app/: globals.css  layout.tsx  page.tsx
portfolio/src/app/book/: page.tsx
portfolio/src/app/resume/: page.tsx
portfolio/src/app/slingshot/: page.tsx
portfolio/src/components/booking/: BookingForm.tsx  BookingWidget.tsx  WeeklyCalendar.tsx
portfolio/src/components/canvas/: AsciiParticleCanvas.tsx  SpaceBackground.tsx  useCanvasSize.ts
portfolio/src/components/layout/: Navbar.tsx  SmoothScroll.tsx
portfolio/src/components/sections/: About.tsx  (+6 more)
portfolio/src/lib/: availability.ts  email.ts  google-calendar.ts  rate-limit.ts  supabase.ts  turnstile.ts  utils.ts  validation.ts
portfolio/supabase/migrations/: 001_skills_schema.sql  002_slingshot_schema.sql  20260212_booking_system.sql
(+24 files in other folders)
